test/grammar/schema/deprecated/unknown_fail_1/stderr.golden
error[E2L23]: CompileError
 --> ${CWD}/main.k:1:2
  |
1 | @err_deprecated
  |  ^ UnKnown decorator err_deprecated
  |